refactor: make necessary changes to code in order to fit Bear Necessities needs. change in files include: openapi.yaml, calls.http, guest.js, createGuest.js, deleteGuest.js, replaceGuest.js, retrieveGuest.js, testcreateGuest.js, testdeleteGuest.js, testreplaceGuest.js, and testretrieveGuest.js
