# src/endpoints/createGuest.js
@@ -8,9 +8,9 @@ const createGuest = {
   async handler(request, response) {
     try {
       const guestData = request.body;
-      if ( await Guests.existsInDB(request.body.wsuID) === false ) {
+      if ( await Guests.existsInDB(request.body.wneID) === false ) {
         const guest = await Guests.create(guestData);
-        const resourceUri = `${request.originalUrl}/${guest.wsuID}`;
+        const resourceUri = `${request.originalUrl}/${guest.wneID}`;
         delete guest["_id"]; // do not return the mongoID
         response.status(201).location(resourceUri).json(guest);
       } else {
