# src/endpoints/deleteGuest.js
@@ -16,7 +16,7 @@ const deleteGuest = {
         response.status(404).json({
           status: 404,
           error: "Guest not found",
-          message: "wsuID does not exist"
+          message: "wneID does not exist"
         });
       }
     } catch (e) {
