# src/endpoints/retrieveGuest.js
@@ -15,7 +15,7 @@ const retrieveGuest = {
         response.status(404).json({
           status: 404,
           error: "Guest not found",
-          message: "wsuID does not exist"
+          message: "wneID does not exist"
         });
       }
     } catch (e) {
